--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Tienda</string>
+    <string name="url_prods">https://www.serverbpw.com/cm/2020-1/products.php</string>
+    <string name="url_descs">https://www.serverbpw.com/cm/2020-1/product_detail.php?id=</string>
 </resources>
